--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="calculator">
+    <div class="display" id="display">12345</div>
+    <div class="buttons">
+      <button class="clear">C</button>
+      <button>+/-</button>
+      <button>%</button>
+      <button class="operator">/</button>
+
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+      <button class="operator">x</button>
+
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button class="operator">-</button>
+
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button class="operator">+</button>
+
+      <button></button>
+      <button>0</button>
+      <button>.</button>
+      <button class="equals">=</button>
+    </div>
+  </div>
+
   <script src="index.js"></script>
 </body>
 </html>
